--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ os:
 go: master
 
 before_script:
-  - go get golang.org/x/tools/cmd/cover
-  - go get github.com/mattn/goveralls
+  - go get -v ./...
 
 script:
-  - go test -v -covermode=count -coverprofile=coverage.out
-  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
+  - make build
